[gd_scene load_steps=4 format=3 uid="uid://cnv7x8ym2qwfo"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_boss"]
[ext_resource type="Texture2D" path="res://assets/pixellab/boss1.png" id="2_boss_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boss"]
size = Vector2(144, 144)

[node name="Boss" type="Node2D"]
script = ExtResource("1_boss")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_boss_texture")
scale = Vector2(7.2, 7.2)

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("RectangleShape2D_boss")

[node name="ProjectileHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileHitbox"]
shape = SubResource("RectangleShape2D_boss")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -72.0
offset_top = -126.0
offset_right = 72.0
offset_bottom = -108.0
show_percentage = false
